--- a/app/src/main/res/layout/fragment_c.xml
+++ b/app/src/main/res/layout/fragment_c.xml
@@ -1,87 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragment_c_root"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".FragmentC"
-    android:background="#F0F0F0"
-    android:padding="16dp">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/AccountPreferences"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Account Preferences"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:textColor="#009688"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="4dp"/>
-
-    <ListView
-        android:id="@+id/preferencesList"
+    <FrameLayout
+        android:id="@+id/preferences_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/AccountPreferences"
-        android:divider="@android:color/darker_gray"
-        android:dividerHeight="1dp"
-        android:paddingTop="4dp"
-        android:layout_marginBottom="16dp">
-
-    </ListView>
-
-    <TextView
-        android:id="@+id/AdditionalSettings"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Additional Settings"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:textColor="#009688"
-        android:layout_below="@+id/preferencesList"
-        android:layout_marginBottom="4dp"  />
-
-    <ListView
-        android:id="@+id/settingsList"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/AdditionalSettings"
-        android:divider="@android:color/darker_gray"
-        android:dividerHeight="1dp"
-        android:paddingTop="4dp"
-        android:layout_marginBottom="16dp">
-
-    </ListView>
-
-    <TextView
-        android:id="@+id/Misc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Misc."
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:textColor="#009688"
-        android:layout_below="@+id/settingsList"
-        android:layout_marginBottom="4dp" />
-
-    <ListView
-        android:id="@+id/miscList"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/Misc"
-        android:divider="@android:color/darker_gray"
-        android:dividerHeight="1dp"
-        android:paddingTop="4dp">
-
-    </ListView>
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
     <View
         android:id="@+id/bottomScrim"
         android:layout_width="match_parent"
         android:layout_height="25dp"
-        android:layout_alignParentBottom="true"
         android:alpha="0.85"
-        android:background="@android:color/black" />
+        android:background="@color/black" />
 
-</RelativeLayout>
+</LinearLayout>
