--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,9 @@
     </style>
 
     <style name="Theme.DarpandeepKaurMyRuns3" parent="Base.Theme.DarpandeepKaurMyRuns3" />
+    <style name="PreferenceThemeOverlay.MyRuns" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="colorControlActivated">@color/teal_700</item>
+        <item name="colorPrimary">@color/teal_700</item>
+        <item name="colorSecondary">@color/teal_700</item>
+    </style>
 </resources>
